Some bugfixes after a run through Sonar